@@ -149,6 +149,7 @@ struct callstack_element {
 	int is_syscall;
 	void * return_addr;
 	struct timeval time_spent;
+	void * arch_ptr;
 };
 
 #define MAX_CALLDEPTH 64
